manifests/manifests/receiver-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webrtc-receiver
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: webrtc-receiver
  template:
    metadata:
      labels:
        app: webrtc-receiver
    spec:
      containers:
        - name: webrtc-receiver
          image: ghcr.io/ueckoken/plarail2022-receiver-test:478facd-1668672275 # {"$imagepolicy": "plarail2021:webrtc-receiver"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
