manifests/manifests/receiver-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrtc-receiver
  namespace: plarail2021
spec:
  type: ClusterIP
  selector:
    app: webrtc-receiver
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
