manifests/manifests/receiver-test/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webrtc-receiver
  namespace: plarail2021
spec:
  routes:
  - kind: Rule
    match: Host(`receiver-test.chofufes2022.gotti.dev`)
    services:
    - name: webrtc-receiver
      port: 80
